setting: disable notification popups

--- a/src/messages.properties
+++ b/src/messages.properties
@@ -238,6 +238,7 @@ Settings.imagecachebackground=Automatically build image cache in background
 Settings.loglevel=Loglevel
 Settings.language=UI Language
 Settings.languagehint=The language will be changed after restart! 
+Settings.shownotifications=Show notifications
 
 # image settings
 Settings.poster=Poster and Fanart
