--- a/tinyMediaManager/changelog.txt
+++ b/tinyMediaManager/changelog.txt
@@ -1,15 +1,21 @@
+Version 2.5.5
+=======================
++ enhanced writing of certification to the XBMC NFO
+x fixed media info loading problems for some users (JNA update to 4.1)
+x fixed a bug where an invalid config.xml prevented tmm from starting
+x fixed a bug when building the TV show tree 
+x fixed a bug where some settings got lost when updating
+
 Version 2.5.4
 =======================
 /!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!\
 ! There was a nasty bug in an external library with version 2.5.3 which caused !
-! the database to become corrupted. We've added some recovery functions, but   !
-! there could be data which is lost. You can either                            !
-! A) live with that (in some cases the lost data could be gathered with a      !
-!    scrape)                                                                   !
-! B) take a backup file from the backup folder inside tmm (the last one before !
+! our internal database to become corrupted. We've added some recovery         !
+! functions, but there could be data which is lost. You can either             !
+! A) take a backup file from the backup folder inside tmm (the last one before !
 !    19.02.2014)                                                               !
-! C) start over with a new database by deleting the old one (menu              !
-!    Tools -> initialize database and rescan all your data sources.            !
+! B) start over with a new database by deleting the old one (menu              !
+!    Tools -> initialize database and rescan/update all your data sources.     !
 !                                                                              !
 ! We are very sorry for the inconvenience caused by this bug!                  ! 
 \!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!/
@@ -23,8 +29,8 @@ x fixed a crash when writing NFOs
 x fixed a crash when canceling the movie chooser
 x compress database backups (to save space)
 x ignore more special files for Mac OSX (beginning with ._)
-x tweaked our HTTP interface to provide better results for slow conntections
-x removed episodes now also diappear from the season list
+x tweaked our HTTP interface to provide better results for slow connections
+x removed episodes now also disappear from the season list
 
 Version 2.5.3
 =======================
