donator function: autom. add exisiting movies to movie sets

--- a/src/messages.properties
+++ b/src/messages.properties
@@ -96,7 +96,7 @@ movie.scrape.toolowscore=Matching score was too low (<0.75) so we are not taking
 movie.remove=Remove selected movie(s)
 movie.rename=Rename/cleanup selected movie(s)
 movie.renamepreview=Rename/cleanup selected movie(s) - dry run
-movie.renamepreview.hint=Create a preview, which movies have to be renamed
+movie.renamepreview.hint=<html>Create a preview, which movies have to be renamed<br />This is a donator function</html>
 movie.renamerpreview=Renamer preview
 movie.updatemediainfo=Update media information of selected movie(s)
 movie.bulkedit=Bulk editing
@@ -105,6 +105,8 @@ movie.rewritenfo=Rewrite NFO for selected movie(s)
 movie.clearimagecache=Clear image cache for selected movie(s)
 movie.findmissing.all=Find missing movies in all datasources
 movie.findmissing=Find missing movies
+movie.assignmovieset=Find movie sets for selected movie(s)
+movie.assignmovieset.desc=<html>Assign selected movie(s) to their movie sets<br />This is a donator function</html>
 
 movie.export=Export selected movie(s)
 
