--- a/src/messages.properties
+++ b/src/messages.properties
@@ -66,7 +66,7 @@ tmm.registerdonator.error=There was a problem registering your version
 tmm.registerdonator.success=Thank you for registering to the donator version. Please restart tMM.
 tmm.registerdonator.hint=Here you can register to the donator version. The donator version will have some special features as a "thank you" for our supporters. Please fill in the name and email address you used when donating.
 tmm.registerdonator.thanks=You have already registered to the donator version. Thank you again for donating!
-tmm.donatorfunction.hint=This feature is restricted to our donators.
+tmm.donatorfunction.hint=This feature is restricted to our donators
 
 status.activethreads=active threads
 status.queuesize=Queue:
@@ -96,7 +96,7 @@ movie.scrape.toolowscore=Matching score was too low (<0.75) so we are not taking
 movie.remove=Remove selected movie(s)
 movie.rename=Rename/cleanup selected movie(s)
 movie.renamepreview=Rename/cleanup selected movie(s) - dry run
-movie.renamepreview.hint=<html>Create a preview, which movies have to be renamed<br />This is a donator function</html>
+movie.renamepreview.hint=<html>Create a preview, which movies have to be renamed<br />This feature is restricted to our donators</html>
 movie.renamerpreview=Renamer preview
 movie.updatemediainfo=Update media information of selected movie(s)
 movie.bulkedit=Bulk editing
@@ -106,7 +106,7 @@ movie.clearimagecache=Clear image cache for selected movie(s)
 movie.findmissing.all=Find missing movies in all datasources
 movie.findmissing=Find missing movies
 movie.assignmovieset=Find movie sets for selected movie(s)
-movie.assignmovieset.desc=<html>Assign selected movie(s) to their movie sets<br />This is a donator function</html>
+movie.assignmovieset.desc=<html>Assign selected movie(s) to their movie sets<br />This feature is restricted to our donators</html>
 
 movie.export=Export selected movie(s)
 
