added mnemonics to the menus

--- a/src/messages.properties
+++ b/src/messages.properties
@@ -67,6 +67,9 @@ tmm.registerdonator.success=Thank you for registering to the donator version. Pl
 tmm.registerdonator.hint=Here you can register to the donator version. The donator version will have some special features as a "thank you" for our supporters. Please fill in the name and email address you used when donating.
 tmm.registerdonator.thanks=You have already registered to the donator version. Thank you again for donating!
 tmm.donatorfunction.hint=This feature is restricted to our donators
+tmm.help=Help
+tmm.faq=Frequently asked questions
+tmm.forum=Find help in the tinyMediaManager forum
 
 status.activethreads=active threads
 status.queuesize=Queue:
