added accelerators and an action for setting the watched flag

--- a/src/messages.properties
+++ b/src/messages.properties
@@ -110,6 +110,7 @@ movie.findmissing.all=Find missing movies in all datasources
 movie.findmissing=Find missing movies
 movie.assignmovieset=Find movie sets for selected movie(s)
 movie.assignmovieset.desc=<html>Assign selected movie(s) to their movie sets<br />This feature is restricted to our donators</html>
+movie.setwatchedflag=Set the watched flag for selected movie(s)
 
 movie.export=Export selected movie(s)
 
@@ -360,6 +361,7 @@ tvshowepisode.clone=Clone episode
 tvshowepisode.remove=Remove episode
 tvshowepisode.rewritenfo=Rewrite NFO for selected episode(s)
 tvshowepisode.choose=Choose an episode
+tvshowepisode.setwatchedflag=Set the watched flag for selected episode(s)
 
 # metatags
 metatag.actors=Actors
