completely reworked our threading model

--- a/src/messages.properties
+++ b/src/messages.properties
@@ -70,12 +70,20 @@ tmm.donatorfunction.hint=This feature is restricted to our donators
 tmm.help=Help
 tmm.faq=Frequently asked questions
 tmm.forum=Find help in the tinyMediaManager forum
+tmm.queued=queued
 
-status.activethreads=active threads
-status.queuesize=Queue:
+status.activethreads=There are active threads - click for details
+task.running=Working..
+task.queued=Waiting..
+task.cancelled=Cancelled..
+task.finished=Finished..
+task.imagedownloads=Downloading images
+task.download=File download
+task.othertasks=Performing background tasks
+task.remaining=tasks remaining
 
 # menu & popup on rightclick
-onlyoneoperation=Only one operation at one time is allowed
+onlyoneoperation=Only one operation at one time is allowed. The task will be queued
 update.datasource=Update data sources
 update.datasource.unavailable=Datasource {} not available - skipping 
 update.datasource.movieinroot=Found file '{}' in a directory containing more than one movie. To get this imported, please activate the 'Allow multiple movies per folder' feature in movie settings (read carefully!)
@@ -84,8 +92,12 @@ export.detail=Template contains detail pages
 export.setdestination=Set export destination
 export.selectdirectory=select export directory
 
+update.cleanup=Cleanup database
+update.mediainfo=getting Mediainfo
+
 edit.discard=Discard changes
 
+movie.scraping=Scraping movies
 movie.scrape.selected=Search & scrape selected movie(s)
 movie.scrape.selected.force=Search & scrape selected movie(s) - force best match
 movie.scrape.selected.force.desc=Search & scrape selected movie(s) without user interaction; forces best match
@@ -335,6 +347,7 @@ Settings.separator=Separator
 Settings.tvshow.certifactioncountry.hint=Hint: at the moment none of the scraper supports certifications from different countries. \r\nThe TV Database will always return US certifications\r\nAniDB does not provide certifications 
 
 # tv shows
+tvshow.scraping=Scraping TV shows
 tvshow.scrape.newitems=Scrape new items
 tvshow.scrape.selected=Search & scrape selected TV show(s)
 tvshow.scrape.selected.force=Search & scrape selected TV show(s) - force best match
@@ -355,6 +368,7 @@ tvshow.clearimagecache=Clear image cache for selected TV show(s)/episode(s)
 tvshow.renamer.failedrename=Failed to rename episode {} - invalid season and/or episode number
 tvshow.renamer.tvshowfolder=Rename TV show folder
 tvshow.renamer.tvshowfolder.year=Add year to the TV show folder
+tvshow.updatemediainfo=Update media information of selected TV shows(s)/episodes(s)
 
 tvshowepisode.scrape=Scrape episode metadata
 tvshowepisode.clone=Clone episode
