added secure storing of credentials for proxy/trakt.tv/xbmc

--- a/src/messages.properties
+++ b/src/messages.properties
@@ -240,7 +240,10 @@ Settings.images=Images
 Settings.tvshow=TV Shows
 Settings.general=General
 Settings.externaldevices=External devices
+Settings.externalservices=External services
 Settings.filetypes=File types
+Settings.trakttv=Trakt.tv
+Settings.trakttv.apikey=Trakt.tv API key
 
 # general settings
 Settings.proxy=Proxy Settings
