checks for MediaEntities without video files (should not happen, but does..)

--- a/src/messages.properties
+++ b/src/messages.properties
@@ -531,6 +531,7 @@ message.update.errormoviedir=Failed parsing movie directory{} {}
 
 message.database.loadmovies=Could not load movies from database
 message.database.loadtvshows=Could not load tv shows from database
+message.database.corrupteddata=Corrupted data has been found and removed from your database. Please update your data sources!
 
 message.config.loadsettingserror=Loading settings failed{} {}
 message.config.savesettingserror=Saving settings failed{} {}
