base integration of extra artwork done

--- a/src/messages.properties
+++ b/src/messages.properties
@@ -181,6 +181,10 @@ image.choose.fanart=Choose fanart
 image.choose.poster=Choose poster
 image.choose.banner=Choose banner
 image.choose.season=Choose season poster
+image.choose.logo=Choose logo
+image.choose.clearart=Choose clearart
+image.choose.thumb=Choose thumb
+image.choose.disc=Choose disc art
 image.extrathumbs.markall=Mark all extrathumbs
 image.extrathumbs.unmarkall=Unmark all extrathumbs
 image.extrafanart.markall=Mark all extrafanart
@@ -198,6 +202,9 @@ image.notfound.fanart=No fanart found
 image.notfound.poster=No poster found
 image.notfound.banner=No banner found
 image.notfound.thumb=No thumb found
+image.notfound.logo=No logo found
+image.notfound.clearart=No clearart found
+image.notfound.disc=No disc art found
 
 genre.add=Add genre
 genre.remove=Remove genre
@@ -269,6 +276,7 @@ Settings.fanarttv.alert=Attention: Fanart.tv does not provide poster
 Settings.moviefilename=<movie filename>
 Settings.tbn.deprecation=.tbn is deprecated and will be removed soon
 Settings.naming.info=NOTE: The above options will create a file name with either a .JPG or .PNG extension depending on artwork format/type.
+Settings.extraartwork=Enable extra artwork
 Settings.enable.extrathumbs=Enable extrathumbs
 Settings.resize.extrathumbs=Resize extrathumbs to (width)
 Settings.enable.extrafanart=Enable extrafanart
@@ -400,6 +408,7 @@ metatag.director=Director
 metatag.episode=Episode
 metatag.episodes=Episodes
 metatag.external=external
+metatag.extraartwork=Extra artwork
 metatag.filename=Filename
 metatag.files=Files
 metatag.format=Format
@@ -466,9 +475,13 @@ mediafiletype.nfo=NFO
 mediafiletype.poster=Poster
 mediafiletype.fanart=Fanart
 mediafiletype.banner=Banner
+mediafiletype.clearart=Clearart
+mediafiletype.logo=Logo
+mediafiletype.discart=Disc art
 mediafiletype.thumb=Thumb
 mediafiletype.trailer=Trailer
 mediafiletype.extrafanart=Extrafanart
+mediafiletype.extrathumb=Extrathumb
 mediafiletype.graphic=Graphic
 mediafiletype.movie=Movie
 mediafiletype.episode=Episode
