--- a/src/messages.properties
+++ b/src/messages.properties
@@ -107,7 +107,7 @@ movie.scrape.metadata=Scrape metadata for selected movie(s)
 movie.scrape.metadata.desc=Scrape metadata for selected movie(s)
 movie.scrape.nomatchfound=No suitable movie found during search 
 movie.scrape.toosimilar=Movie titles are too similar - can't decide which to use 
-movie.scrape.toolowscore=Matching score was too low (<0.75) so we are not taking this result
+movie.scrape.toolowscore=Matching score was too low (<{}) so we are not taking this result
 movie.remove=Remove selected movie(s)
 movie.rename=Rename/cleanup selected movie(s)
 movie.renamepreview=Rename/cleanup selected movie(s) - dry run
