enable explicit media player configuration

--- a/src/messages.properties
+++ b/src/messages.properties
@@ -13,6 +13,7 @@ Button.scrape=Scrape
 Button.edit=Edit
 Button.register=Register
 Button.rename=Rename
+Button.chooseplayer=Choose player
 
 menuitem.cut=Cut
 menuitem.copy=Copy
@@ -267,6 +268,7 @@ Settings.loglevel=Loglevel
 Settings.language=UI Language
 Settings.languagehint=The language will be changed after restart! 
 Settings.shownotifications=Show notifications
+Settings.mediaplayer.hint=Specify a media player which will be used for playback\r\n(if no one is chosen, the default player will be taken)
 
 # image settings
 Settings.poster=Poster and Fanart
