fix for drawing tree nodes

--- a/src/messages.properties
+++ b/src/messages.properties
@@ -72,6 +72,7 @@ tmm.help=Help
 tmm.faq=Frequently asked questions
 tmm.forum=Find help in the tinyMediaManager forum
 tmm.queued=queued
+tmm.unknowntitle=Unknown title
 
 status.activethreads=There are active threads - click for details
 task.running=Working..
