added a space substitution for TV shows

--- a/src/messages.properties
+++ b/src/messages.properties
@@ -358,6 +358,8 @@ Settings.tvshowepisodetofilename=add episode title to filename
 Settings.tvshowseasonfoldername=season folder name
 Settings.tvshowseasonhint=$1 - Season number\n$2 - Season number with at least 2 digits
 Settings.separator=Separator
+Settings.separator.hint=Separator between title and season/episode number
+Settings.tvshowspacereplacement.hint=Replace spaces in title with this character
 Settings.tvshow.certifactioncountry.hint=Hint: at the moment none of the scraper supports certifications from different countries. \r\nThe TV Database will always return US certifications\r\nAniDB does not provide certifications 
 
 # tv shows
