--- a/src/messages.properties
+++ b/src/messages.properties
@@ -29,9 +29,9 @@ tmm.tvshow=TV show
 tmm.settings=Settings
 
 # menu actions
-tmm.exit=Exit
+tmm.exit=Quit
 tmm.exit.runningtasks=Are you sure you want to close tinyMediaManager?\nSome threads seem to be still running...
-tmm.exit.confirmation=Exit Confirmation
+tmm.exit.confirmation=Quit confirmation
 tmm.cache=Cache
 tmm.clearurlcache=clear url cache
 tmm.clearimagecache=clear image cache
