own programmed exception dialog removed taskdialog

--- a/src/messages.properties
+++ b/src/messages.properties
@@ -73,6 +73,8 @@ tmm.faq=Frequently asked questions
 tmm.forum=Find help in the tinyMediaManager forum
 tmm.queued=queued
 tmm.unknowntitle=Unknown title
+tmm.problemdetected=Problem detected
+tmm.uicrash=Whoops. Something unforeseen has happened.\nPlease restart TMM and try again.\nIf it happens again, we would kindly ask you to submit a bugreport.
 
 status.activethreads=There are active threads - click for details
 task.running=Working..
