added font selection for UI updated splash screen fixed several little UI glitches

--- a/src/messages.properties
+++ b/src/messages.properties
@@ -272,6 +272,11 @@ Settings.language=UI Language
 Settings.languagehint=The language will be changed after restart! 
 Settings.shownotifications=Show notifications
 Settings.mediaplayer.hint=Specify a media player which will be used for playback\r\n(if no one is chosen, the default player will be taken)
+Settings.fonts.hint=tinyMediaManager has been created with the font "Dialog" size 12.\r\nChanging the font and/or size can cause visual glitches (but not break functionality!) 
+Settings.fontfamily=Font family
+Settings.fontsize=Font size
+Settings.fontchangehint=The font will be changed after restart!
+Settings.ui=UI settings 
 
 # image settings
 Settings.poster=Poster and Fanart
