Tv show renamer enhancements

--- a/src/messages.properties
+++ b/src/messages.properties
@@ -366,7 +366,7 @@ Settings.tvshowseasontofilename=add season to filename
 Settings.tvshowtofilename=add TV show name to filename
 Settings.tvshowepisodetofilename=add episode title to filename
 Settings.tvshowseasonfoldername=season folder name
-Settings.tvshowseasonhint=$1 - Season number\n$2 - Season number with at least 2 digits
+Settings.tvshowseasonhint=$1 - Season number\n$2 - Season number with at least 2 digits\nYou can omit creating the season folder by leaving this field blank.\nBut to use this, you have to check \"add season to filename\"
 Settings.separator=Separator
 Settings.separator.hint=Separator between title and season/episode number
 Settings.tvshowspacereplacement.hint=Replace spaces in title with this character
