physically delete movies from within tmm

--- a/src/messages.properties
+++ b/src/messages.properties
@@ -113,6 +113,8 @@ movie.scrape.nomatchfound=No suitable movie found during search
 movie.scrape.toosimilar=Movie titles are too similar - can't decide which to use 
 movie.scrape.toolowscore=Matching score was too low (<{}) so we are not taking this result
 movie.remove=Remove selected movie(s)
+movie.delete=Delete selected movie(s)
+movie.delete.hint=Delete selected movie(s) from tinyMediaManager and the data source  
 movie.rename=Rename/cleanup selected movie(s)
 movie.renamepreview=Rename/cleanup selected movie(s) - dry run
 movie.renamepreview.hint=<html>Create a preview, which movies have to be renamed<br />This feature is restricted to our donators</html>
