finished deletion of movies/tv shows

--- a/src/messages.properties
+++ b/src/messages.properties
@@ -114,7 +114,8 @@ movie.scrape.toosimilar=Movie titles are too similar - can't decide which to use
 movie.scrape.toolowscore=Matching score was too low (<{}) so we are not taking this result
 movie.remove=Remove selected movie(s)
 movie.delete=Delete selected movie(s)
-movie.delete.hint=Delete selected movie(s) from tinyMediaManager and the data source  
+movie.delete.hint=Delete selected movie(s) from tinyMediaManager and the data source
+movie.delete.desc=Delete selected movie(s) from tinyMediaManager and the data source?\nThe files will be temporary moved to a folder called .deletedByTMM inside the data source and deleted on exit of tinyMediaManager  
 movie.rename=Rename/cleanup selected movie(s)
 movie.renamepreview=Rename/cleanup selected movie(s) - dry run
 movie.renamepreview.hint=<html>Create a preview, which movies have to be renamed<br />This feature is restricted to our donators</html>
@@ -279,6 +280,7 @@ Settings.fontfamily=Font family
 Settings.fontsize=Font size
 Settings.fontchangehint=The font will be changed after restart!
 Settings.ui=UI settings 
+Settings.deletetrash=Delete trash/backup folder on exit
 
 # image settings
 Settings.poster=Poster and Fanart
@@ -384,6 +386,9 @@ tvshow.scrape.nomatchfound=No suitable TV show found during search
 tvshow.edit=Edit selected TV show(s)/episode(s)
 tvshow.edit.abortqueue.desc=Abort editing all selected TV shows
 tvshow.remove=Remove selected TV show(s)/episode(s)
+tvshow.delete=Delete selected TV show(s)/episode(s)
+tvshow.delete.hint=Delete selected TV show(s)/episode(s) from tinyMediaManager and the data source
+tvshow.delete.desc=Delete selected TV show(s)/episode(s) from tinyMediaManager and the data source?\nThe files will be temporary moved to a folder called .deletedByTMM inside the data source and deleted on exit of tinyMediaManager 
 tvshow.changeseasonposter=Change season poster of selected season(s)
 tvshow.change=Change TV show
 tvshow.bulkedit=Bulk editing
