--- a/changelog.txt
+++ b/changelog.txt
@@ -1,16 +1,47 @@
 Version 2.x (unreleased)
 =======================
+/!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!\
+!                       D O N A T O R      V E R S I O N                       !
+!                                                                              !
+!    Our donators are now able to register their tinyMediaManager copies to    !
+!         unlock special features as a "Thank you" for their support.          !
+!                                                                              !
+\!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!/
+
++ bigger UI rework 
 + new icons
++ configurable font and font size
++ extra artwork (banner, CD art, clearart, ..) is now available for movies and movie sets
++ new threading model: you can now queue different tasks; display open tasks
++ smart scrape: if there is no result from automatic scrape a manual scrape will pop up
++ NFO enhancement: multiple IDs (from several meta data providers) will be stored
++ option to set the preferred media player 
 + able to play trailers
-+ Movie renamer preview
-+ delete works now with deleteing physical files (moving to backup folder)
-+ ignore some Mac specific files on searching hdd
++ trailer preferences (which one to automatic choose for NFO)
++ Movie renamer preview (donator feature)
++ automatically add existing movies to movie sets (donator feature)
++ delete works now with deleting physical files (moving to backup folder)
++ ignore some Mac specific files on searching hdd/network shares
 + language updates
 + hotkeys for menu and other functions
-+ (WIP) subtitle searching and downloading
-+ (WIP) Trakt.tv integration
 + improved season and episodes parser
++ preserve unsupported XML tags (from other tools) in NFO files
++ several enhancements to the TV show renamer
++ show artwork from the media file panel in lightbox
++ export for TV shows basically done
++ more filter options for TV shows 
++ (WIP) subtitle searching and downloading
++ (WIP) trailer downloading
++ (WIP) Trakt.tv integration
+x fix occasional database inconsistencies
 x fix TvShow rename in command line
+x fix an occasional crash when choosing artwork
+x empty url cache from broken/unreadable HTTP responses
+x better integration of the year to the result score calculation
+x filter duplicate results from ofdb 
+x prevent audio streams from being added multiple times
+x detect stacking markers with leading zeros
+x import of watched state from XBMC NFO 
 x thousands of various fixes and stabilization :)
 
 Version 2.5.5
