base integration of trakt.tv to the ui

--- a/src/messages.properties
+++ b/src/messages.properties
@@ -130,6 +130,10 @@ movie.findmissing=Find missing movies
 movie.assignmovieset=Find movie sets for selected movie(s)
 movie.assignmovieset.desc=<html>Assign selected movie(s) to their movie sets<br />This feature is restricted to our donators</html>
 movie.setwatchedflag=Set the watched flag for selected movie(s)
+movie.synctrakt=Synchronize the movie collection with Trakt.tv
+movie.synctrakt.desc=Synchronize the movie collection with Trakt.tv
+movie.synctraktwatched=Synchronize the watched state with Trakt.tv
+movie.synctraktwatched.desc=Synchronize the watched state with Trakt.tv
 
 movie.export=Export selected movie(s)
 
@@ -403,6 +407,10 @@ tvshow.renamer.tvshowfolder=Rename TV show folder
 tvshow.renamer.tvshowfolder.year=Add year to the TV show folder
 tvshow.updatemediainfo=Update media information of selected TV shows(s)/episodes(s)
 tvshow.export=Export selected TV show(s)
+tvshow.synctrakt=Synchronize the TV show collection with Trakt.tv
+tvshow.synctrakt.desc=Synchronize the TV show collection with Trakt.tv
+tvshow.synctraktwatched=Synchronize the watched state with Trakt.tv
+tvshow.synctraktwatched.desc=Synchronize the watched state with Trakt.tv
 
 tvshowepisode.scrape=Scrape episode metadata
 tvshowepisode.clone=Clone episode
