tweak of trakt.tv

--- a/src/messages.properties
+++ b/src/messages.properties
@@ -285,6 +285,7 @@ Settings.fontsize=Font size
 Settings.fontchangehint=The font will be changed after restart!
 Settings.ui=UI settings 
 Settings.deletetrash=Delete trash/backup folder on exit
+Settings.trakt=Automatic sync with Trakt.tv
 
 # image settings
 Settings.poster=Poster and Fanart
@@ -418,6 +419,12 @@ tvshowepisode.remove=Remove episode
 tvshowepisode.rewritenfo=Rewrite NFO for selected episode(s)
 tvshowepisode.choose=Choose an episode
 tvshowepisode.setwatchedflag=Set the watched flag for selected episode(s)
+
+trakt.sync=Sync Trakt.tv data
+trakt.sync.movie=Syncing movie collection
+trakt.sync.moviewatched=Syncing movie watched state
+trakt.sync.tvshow=Syncing TV show collection
+trakt.sync.tvshowwatched=Syncing TV show watched state
 
 # metatags
 metatag.actors=Actors
