added iamge viewer for image chooser

--- a/src/messages.properties
+++ b/src/messages.properties
@@ -203,6 +203,8 @@ image.extrafanart.unmarkall=Unmark all extrafanart
 image.nonefound=no image found
 image.noneselected=no image selected!
 image.seteselected=Set selected image
+image.download=Downloading image
+image.download.failed=Could not download image
 image.download.noid=No ID (imdbId or tmdbId) for searching available
 image.download.progress=Downloading images
 image.poster.size=Poster size
@@ -216,6 +218,7 @@ image.notfound.thumb=No thumb found
 image.notfound.logo=No logo found
 image.notfound.clearart=No clearart found
 image.notfound.disc=No disc art found
+image.showoriginal=Show original image
 
 genre.add=Add genre
 genre.remove=Remove genre
