lock some more proxied lists print a message if the artwork scraper do not find any artwork

--- a/src/messages.properties
+++ b/src/messages.properties
@@ -207,6 +207,7 @@ image.download=Downloading image
 image.download.failed=Could not download image
 image.download.noid=No ID (imdbId or tmdbId) for searching available
 image.download.progress=Downloading images
+image.download.nothingfound=No images found
 image.poster.size=Poster size
 image.poster.naming=Poster file naming
 image.fanart.size=Fanart size
