tweaks for the register donator function

--- a/src/messages.properties
+++ b/src/messages.properties
@@ -63,9 +63,9 @@ tmm.update.title=check for update
 tmm.update.message=A new update has been found.\nDo you want to update?
 tmm.registeredto=Registered to:
 tmm.registerdonator=Register for donator version
-tmm.registerdonator.error=There was a problem registering your version
+tmm.registerdonator.error=There was a problem registering your version.\nRegistering your donation in our system may take a while. Please try again in a few minutes.
 tmm.registerdonator.success=Thank you for registering to the donator version. Please restart tMM.
-tmm.registerdonator.hint=Here you can register to the donator version. The donator version will have some special features as a "thank you" for our supporters. Please fill in the name and email address you used when donating.
+tmm.registerdonator.hint=Here you can register to the donator version. The donator version will have some special features as a "thank you" for our supporters. Please fill in the name and email address you used when donating. 
 tmm.registerdonator.thanks=You have already registered to the donator version. Thank you again for donating!
 tmm.donatorfunction.hint=This feature is restricted to our donators
 tmm.help=Help
