--- a/src/messages.properties
+++ b/src/messages.properties
@@ -290,6 +290,8 @@ Settings.fontchangehint=The font will be changed after restart!
 Settings.ui=UI settings 
 Settings.deletetrash=Delete trash/backup folder on exit
 Settings.trakt=Automatic sync with Trakt.tv
+Settings.trakt.clearmovies=Remove movies from Trakt.tv
+Settings.trakt.cleartvshows=Remove TV shows from Trakt.tv
 
 # image settings
 Settings.poster=Poster and Fanart
@@ -429,6 +431,9 @@ trakt.sync.movie=Syncing movie collection
 trakt.sync.moviewatched=Syncing movie watched state
 trakt.sync.tvshow=Syncing TV show collection
 trakt.sync.tvshowwatched=Syncing TV show watched state
+trakt.clear=Clearing Trakt.tv data
+trakt.clear.movies=Clearing Trakt.tv movie(s)
+trakt.clear.tvshows=Clearing Trakt.tv TV show(s)
 
 # metatags
 metatag.actors=Actors
