fix for clearing trakt.tv data

--- a/src/messages.properties
+++ b/src/messages.properties
@@ -291,7 +291,9 @@ Settings.ui=UI settings
 Settings.deletetrash=Delete trash/backup folder on exit
 Settings.trakt=Automatic sync with Trakt.tv
 Settings.trakt.clearmovies=Remove movies from Trakt.tv
+Settings.trakt.clearmovies.hint=ATTENTION: This will remove all your movies and watched states from your Trakt.tv profile. Proceed?
 Settings.trakt.cleartvshows=Remove TV shows from Trakt.tv
+Settings.trakt.cleartvshows.hint=ATTENTION: This will remove all your TV shows and watched states from your Trakt.tv profile. Proceed?
 
 # image settings
 Settings.poster=Poster and Fanart
