--- a/src/messages.properties
+++ b/src/messages.properties
@@ -112,10 +112,10 @@ movie.scrape.metadata.desc=Scrape metadata for selected movie(s)
 movie.scrape.nomatchfound=No suitable movie found during search 
 movie.scrape.toosimilar=Movie titles are too similar - can't decide which to use 
 movie.scrape.toolowscore=Matching score was too low (<{}) so we are not taking this result
-movie.remove=Remove selected movie(s)
-movie.delete=Delete selected movie(s)
-movie.delete.hint=Delete selected movie(s) from tinyMediaManager and the data source
-movie.delete.desc=Delete selected movie(s) from tinyMediaManager and the data source?\nThe files will be temporary moved to a folder called .deletedByTMM inside the data source and deleted on exit of tinyMediaManager  
+movie.remove=Remove selected movie(s) (DB)
+movie.delete=Delete selected movie(s) (DB + file)
+movie.delete.hint=Delete selected movie(s) from tinyMediaManager DB and your data source!
+movie.delete.desc=Delete selected movie(s) from tinyMediaManager DB and the data source?\nThe files will be temporary moved to a folder called .deletedByTMM inside the data source and deleted on exit of tinyMediaManager  
 movie.rename=Rename/cleanup selected movie(s)
 movie.renamepreview=Rename/cleanup selected movie(s) - dry run
 movie.renamepreview.hint=<html>Create a preview, which movies have to be renamed<br />This feature is restricted to our donators</html>
