--- a/changelog.txt
+++ b/changelog.txt
@@ -1,25 +1,23 @@
-Version 2.x (unreleased)
+Version 2.6 (unreleased)
 =======================
 /!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!\
 !                       D O N A T O R      V E R S I O N                       !
 !                                                                              !
 !    Our donators are now able to register their tinyMediaManager copies to    !
 !         unlock special features as a "Thank you" for their support.          !
-!                                                                              !
+!                           http://goo.gl/L8G5BB                               !
 \!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!/
 
-+ bigger UI rework 
++ bigger UI rework (http://goo.gl/3wy3gL)
 + new icons
 + configurable font and font size
 + extra artwork (banner, CD art, clearart, ..) is now available for movies and movie sets
-+ new threading model: you can now queue different tasks; display open tasks
++ new threading model: you can now queue different tasks; display open tasks (http://goo.gl/yFGtPq)
 + smart scrape: if there is no result from automatic scrape a manual scrape will pop up
 + NFO enhancement: multiple IDs (from several meta data providers) will be stored
 + option to set the preferred media player 
 + able to play trailers
 + trailer preferences (which one to automatic choose for NFO)
-+ Movie renamer preview (donator feature)
-+ automatically add existing movies to movie sets (donator feature)
 + delete works now with deleting physical files (moving to backup folder)
 + ignore some Mac specific files on searching hdd/network shares
 + language updates
@@ -30,9 +28,12 @@ Version 2.x (unreleased)
 + show artwork from the media file panel in lightbox
 + export for TV shows basically done
 + more filter options for TV shows 
-+ preview of images in the image chooser
-+ (WIP) trailer downloading
-+ (WIP) Trakt.tv integration
++ preview of images in the image chooser (http://goo.gl/kIFaKJ)
++ media source management (http://goo.gl/cE62xb)
+! automatically add existing movies to movie sets (donator feature)
+! Movie renamer preview (donator feature) (http://goo.gl/PS50MF)
+! (WIP) trailer downloading (donator feature) (http://goo.gl/hozk18)
+! (WIP) Trakt.tv integration (donator feature) (http://goo.gl/WNEzsG)
 x fix occasional database inconsistencies
 x fix TvShow rename in command line
 x fix an occasional crash when choosing artwork
@@ -43,122 +44,3 @@ x prevent audio streams from being added multiple times
 x detect stacking markers with leading zeros
 x import of watched state from XBMC NFO 
 x thousands of various fixes and stabilization :)
-
-Version 2.5.5
-=======================
-+ enhanced writing of certification to the XBMC NFO
-x fixed media info loading problems for some users (JNA update to 4.1)
-x fixed a bug where an invalid config.xml prevented tmm from starting
-x fixed a bug when building the TV show tree
-x fixed a bug where some settings got lost when updating
-x fixed writing of the watched flag to the XBMC TV show episode NFO 
-
-Version 2.5.4
-=======================
-/!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!\
-! There was a nasty bug in an external library with version 2.5.3 which caused !
-! the database to become corrupted. We've added some recovery functions, but   !
-! there could be data which is lost. You can either                            !
-! A) live with that (in some cases the lost data could be gathered with a      !
-!    scrape)                                                                   !
-! B) take a backup file from the backup folder inside tmm (the last one before !
-!    19.02.2014)                                                               !
-! C) start over with a new database by deleting the old one (menu              !
-!    Tools -> initialize database and rescan all your data sources.            !
-!                                                                              !
-! We are very sorry for the inconvenience caused by this bug!                  ! 
-\!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!/
-
-x improved the TVDB scraper: the scraper provides better results and is not searchable with the TVDB id
-x fixed correct loading of swt.jar on all platforms
-x added slovenian language for the scrapers
-x fixed display of trailers in the table (in conjunction with a downloaded trailer)
-x fixed resizing behavior of the movie chooser dialog (buttons disappeared)
-x fixed a crash when writing NFOs
-x fixed a crash when canceling the movie chooser
-x compress database backups (to save space)
-x ignore more special files for Mac OSX (beginning with ._)
-x tweaked our HTTP interface to provide better results for slow conntections
-x removed episodes now also diappear from the season list
-
-Version 2.5.3
-=======================
-+ activated SWT loading for all platforms (put a proper swt.jar from the eclipse project in the lib folder to access native file dialogs)
-+ translations: added russian (incomplete)
-x ArtworkPanel: change ordering (highres before thumbs)
-x fix some artwork failures with movie sets
-x fix errors on metadata scraping
-x catch some errors from tmdb
-x houskeeping: correct tv episodes with wrong path (if you still have some weird behavior with TV shows, try to remove and readd the TV shows)
-x some other minor improvements and stabilization fixes
-
-Version 2.5.3
-=======================
-+ activated SWT loading for all platforms (put a proper swt.jar from the eclipse project in the lib folder to access native file dialogs)
-+ translations: added russian (incomplete)
-x ArtworkPanel: change ordering (highres before thumbs)
-x fix some artwork failures with movie sets
-x fix errors on metadata scraping
-x catch some errors from tmdb
-x houskeeping: correct tv episodes with wrong path (if you still have some weird behavior with TV shows, try to remove and readd the TV shows)
-x some other minor improvements and stabilization fixes
-
-Version 2.5.2
-=======================
-+ added a lightbox effect, when clicking on an artwork in the movie/movie set/tv show panel (see http://www.tinymediamanager.org/index.php/image-preview-lightbox/)
-+ updated mediainfo libs
-+ (movie) when removing the last movie from a movie set, the movie set is also removed
-+ (movie) added filter for certifications 
-+ (movie) added option to fall back to another scraper when not search result has been found
-+ (TV show) added episodeguide to the TV show nfo
-+ (movie) added languages (spoken languages) to the nfo
-+ (TV show) added function to rename complete seasons
-+ (movie) added double click event (in the table) to open the movie editor
-+ (movie) added a better unwatched logo
-+ added comments to the NFO
-+ added movie filename to the movie chooser dialog (for better support of multi movie dirs)
-x when renaming TV shows, some episode paths still pointed to the old path
-x sometimes changing movie/TV show artwork wasn't updated internally
-x better renaming of TV show disc images
-x improved performance when removing multiple movies
-x some inconsistances with linking of movies and moviesets
-x in movie/TV show chooser - prevent strange behaviour when changing the scraper while another search is active
-x added producers also to the nfo
-x changed TV show - certification settings (thetvdb only provides US certs..)
-x prevent some exceptions when renaming/filtering TV shows
-x parsing of multi movie dirs
-x wrong saving of the tmdb id since 2.5.1
-
-Version 2.5.1
-=======================
-x fixed a problem where mediainfo could not be loaded
-x fixed a database loading problem
-
-Version 2.5
-=======================
-+ completely reworked the TV show panel (including a new panel for seasons - http://www.tinymediamanager.org/index.php/reworked-tv-show-section/ )
-+ completely reworked the (movie) filter panel and added a filter panel for TV shows (see http://www.tinymediamanager.org/index.php/filter_panels/ )
-+ added movie filters: datasource, missing metadata, missing artwork, missing subtitles, new movies
-+ added TV show filters: datasource, cast member, missing metadata, missing artwork, missing subtitles, new episodes
-+ added possibility to hide several columns in the movie table 
-+ experimental support for AniDB scraper
-+ added fanart.tv for TV shows
-+ added imdb top 250
-+ added producers
-+ added an ASCII cleaner for the renamer
-+ added "bad words" to the movie importer
-+ possibility to get the runtime from media files rather than scraper
-+ added some settings for the TV show renamer
-+ translations: spanish (thx to roliverosc), italian (thx to peppe_sr), korean (thx to piodio), norwegian (thx to roandr), french (thx to nerve)
-+/x reworked tagging of TV shows and episodes
-x many enhancements to the "update datasources" and database engine -> tmm is much faster now with large databases
-x some fixes and preventions to the "update datasources" engine
-x many memory optimizations (tmm now uses less memory) 
-x several issues/problems with the renamer
-x artwork naming for DVD/BR images
-x adapted scaling factor of the tmm window - now it should fit on lower screens nicely
-x crash at startup with invalid locales
-x crash when searching for a movie set is fixed with themoviedbapi 3.9  
-x NFO parsing of xbmc-youtube plugin urls
-x externalized some more string (better translations)
-x several fixes to the TV show renamer
